# bd_llm_tui

./: .gitlab-ci.yml  Cargo.toml  Dockerfile  LICENSE  README.md  build.sh  example.sh
.github/workflows/: ci.yml
debian/: changelog  control  rules
src/: main.rs
