[package]
name = "llm_tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.23.0"
crossterm = "0.26.1"
tokio = { version = "1.28.0", features = ["full"] }
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
anyhow = "1.0.71"
chrono = "0.4"
dirs = "5.0"
copypasta = "0.10"
pulldown-cmark = "0.9" 